added crud for new tables and updated swagger
