# TodoService/js/app.js
@@ -33,6 +33,33 @@ class main {
                 debug('error in getting the connection pool');
                 throw err;
             }
+            const SystemFields = [
+                new h.Helpers.SqlField({
+                    name: 'id',
+                    type: sql.BigInt,
+                }),
+                new h.Helpers.SqlField({
+                    name: 'title',
+                    type: sql.NVarChar(100),
+                }),
+            ];
+            const SystemTable = new sqlTableType_1.SqlTableType({
+                connectionPool: pool,
+                tableName: 'System',
+                viewName: 'System',
+                fields: SystemFields,
+                autoGeneratedPrimaryKey: true,
+                throwOnExtraFields: true,
+            });
+            const sy = new baseRouter.BaseRouter({
+                table: SystemTable,
+                disableGetAll: false,
+                disablePost: false,
+                disablePut: false,
+                disablePatch: true,
+                disableDelete: false,
+            });
+            app.use('/System', sy.router);
             const categoryFields = [
                 new h.Helpers.SqlField({
                     name: 'id',
@@ -51,23 +78,40 @@ class main {
                     type: sql.DateTime,
                 }),
             ];
-            const categoriesTable = new sqlTableType_1.SqlTableType({
+            const categoryOneTable = new sqlTableType_1.SqlTableType({
                 connectionPool: pool,
-                tableName: 'categories',
-                viewName: 'categories',
+                tableName: 'categoryOne',
+                viewName: 'categoryOne',
                 fields: categoryFields,
                 autoGeneratedPrimaryKey: true,
                 throwOnExtraFields: true,
             });
-            const cr = new baseRouter.BaseRouter({
-                table: categoriesTable,
+            const crOne = new baseRouter.BaseRouter({
+                table: categoryOneTable,
                 disableGetAll: false,
                 disablePost: false,
                 disablePut: false,
                 disablePatch: true,
                 disableDelete: false,
             });
-            app.use('/categories', cr.router);
+            app.use('/categoryOne', crOne.router);
+            const categoryTwoTable = new sqlTableType_1.SqlTableType({
+                connectionPool: pool,
+                tableName: 'categoryTwo',
+                viewName: 'categoryTwo',
+                fields: categoryFields,
+                autoGeneratedPrimaryKey: true,
+                throwOnExtraFields: true,
+            });
+            const crTwo = new baseRouter.BaseRouter({
+                table: categoryTwoTable,
+                disableGetAll: false,
+                disablePost: false,
+                disablePut: false,
+                disablePatch: true,
+                disableDelete: false,
+            });
+            app.use('/categoryTwo', crTwo.router);
             const tagFields = [
                 new h.Helpers.SqlField({
                     name: 'id',
