# TodoService/src/app.ts
@@ -38,6 +38,37 @@ class main {
         debug('error in getting the connection pool');
         throw err;
       }
+
+      const SystemFields: h.Helpers.SqlField[] = [
+        new h.Helpers.SqlField({
+          name: 'id',
+          type: sql.BigInt,
+        }),
+        new h.Helpers.SqlField({
+          name: 'title',
+          type: sql.NVarChar(100),
+        }),
+      ];
+
+      const SystemTable: SqlTableType = new SqlTableType({
+        connectionPool: pool,
+        tableName: 'System',
+        viewName: 'System',
+        fields: SystemFields,
+        autoGeneratedPrimaryKey: true,
+        throwOnExtraFields: true,
+      });
+      const sy: baseRouter.BaseRouter = new baseRouter.BaseRouter({
+        table: SystemTable,
+        disableGetAll: false,
+        disablePost: false,
+        disablePut: false,
+        disablePatch: true,
+        disableDelete: false,
+      });
+      app.use('/System',sy.router);
+
+
       const categoryFields: h.Helpers.SqlField[] = [
         new h.Helpers.SqlField({
           name: 'id',
@@ -56,23 +87,41 @@ class main {
           type: sql.DateTime,
         }),
       ];
-      const categoriesTable: SqlTableType = new SqlTableType({
+      const categoryOneTable: SqlTableType = new SqlTableType({
         connectionPool: pool,
-        tableName: 'categories',
-        viewName: 'categories',
+        tableName: 'categoryOne',
+        viewName: 'categoryOne',
         fields: categoryFields,
         autoGeneratedPrimaryKey: true,
         throwOnExtraFields: true,
       });
-      const cr: baseRouter.BaseRouter = new baseRouter.BaseRouter({
-        table: categoriesTable,
+      const crOne: baseRouter.BaseRouter = new baseRouter.BaseRouter({
+        table: categoryOneTable,
         disableGetAll: false,
         disablePost: false,
         disablePut: false,
         disablePatch: true,
         disableDelete: false,
       });
-      app.use('/categories', cr.router);
+      app.use('/categoryOne',crOne.router);
+
+      const categoryTwoTable: SqlTableType = new SqlTableType({
+        connectionPool: pool,
+        tableName: 'categoryTwo',
+        viewName: 'categoryTwo',
+        fields: categoryFields,
+        autoGeneratedPrimaryKey: true,
+        throwOnExtraFields: true,
+      });
+      const crTwo: baseRouter.BaseRouter = new baseRouter.BaseRouter({
+        table: categoryTwoTable,
+        disableGetAll: false,
+        disablePost: false,
+        disablePut: false,
+        disablePatch: true,
+        disableDelete: false,
+      });
+      app.use('/categoryTwo', crTwo.router);
 
       const tagFields: h.Helpers.SqlField[] = [
         new h.Helpers.SqlField({
